@@ -1,4 +1,4 @@
-# Copyright 2012-2013 Free Software Foundation, Inc.
+# Copyright 2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -62,7 +62,7 @@ gdb_test_multiple "" $test {
 	unsupported $test
 	return -1
     }
-    -re "valgrind: Bad option.*--vgdb-error=0" {
+    -re "valgrind: Bad option '--vgdb-error=0'" {
 	# valgrind is not >= 3.7.0.
 	unsupported $test
 	return -1
@@ -85,26 +85,17 @@ unset_board_info fileid
 
 clean_restart $executable
 
-gdb_test "$vgdbcmd" " in \\.?_start .*" "target remote for vgdb"
+gdb_test "$vgdbcmd" " in _start .*" "target remote for vgdb"
 
 gdb_test "monitor v.set gdb_output" "valgrind output will go to gdb.*"
 
 set continue_count 1
-set loop 1
-while {$loop && $continue_count < 100} {
+while 1 {
     set test "continue #$continue_count"
     gdb_test_multiple "continue" "" {
 	-re "Invalid free\\(\\).*: main .*\r\n$gdb_prompt $" {
 	    pass $test
-	    set loop 0
-	}
-	-re "Remote connection closed.*\r\n$gdb_prompt $" {
-	    fail "$test (remote connection closed)"
-	    return -1
-	}
-	-re "The program is not being run\\.\r\n$gdb_prompt $" {
-	    fail "$test (valgrind vgdb has terminated)"
-	    return -1
+	    break
 	}
 	-re "\r\n$gdb_prompt $" {
 	    pass "$test (false warning)"
